tests/lifetime/loan/shared_loan_blocks_move.err.expected
error: at 8:13: [LT-LoanConflict] In function 'f', block 'entry': cannot move from 'x': already borrowed by 'r'
   |
 8 |             call take(move x);
   |             ^^^^^^^^^^^^^^^^^
  = note: borrow of 'x' occurs here
   |
 7 |             r = &x;
   |             ^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
